  for user-defined classes. Based on patch from Andy Maier.

Build
-----

- bpo-29643: Fix ``--enable-optimization`` configure option didn't work.

- bpo-29572: Update Windows build and OS X installers to use OpenSSL 1.0.2k.

- Issue #28768: Fix implicit declaration of function _setmode. Patch by
  Masayuki Yamamoto

Tests
-----

- bpo-28087: Skip test_asyncore and test_eintr poll failures on macOS.
  Skip some tests of select.poll when running on macOS due to unresolved
  issues with the underlying system poll function on some macOS versions.

- bpo-15083: Convert ElementTree doctests to unittests.


What's New in Python 2.7.13
===========================

*Release date: 2016-12-17*

Core and Builtins
-----------------

- Revert a37cc3d926ec (Issue #5322).


What's New in Python 2.7.13 release candidate 1?
================================================

*Release date: 2016-12-03*

Core and Builtins
-----------------

- Issue #5322: Fixed setting __new__ to a PyCFunction inside Python code.
  Original patch by Andreas Stührk.

- Issue #28847: dumbdbm no longer writes the index file in when it is not
  changed and supports reading read-only files.

- Issue #11145: Fixed miscellaneous issues with C-style formatting of types
  with custom __oct__ and __hex__.

- Issue #24469: Fixed memory leak caused by int subclasses without overridden
  tp_free (e.g. C-inherited Cython classes).

- Issue #19398: Extra slash no longer added to sys.path components in case of
  empty compile-time PYTHONPATH components.

- Issue #21720: Improve exception message when the type of fromlist is unicode.
  fromlist parameter of __import__() only accepts str in Python 2 and this
  will help to identify the problem especially when the unicode_literals
  future import is used.

- Issue #26906: Resolving special methods of uninitialized type now causes
  implicit initialization of the type instead of a fail.

- Issue #18287: PyType_Ready() now checks that tp_name is not NULL.